MDEXP-861 - Update GET /data-export/download-record/{recordId} endpoint to suppress 999ff field (#566)
* MDEXP-861 Added suppress999 param