@@ -1,6 +1,7 @@
 package org.folio.dataexp.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
@@ -8,6 +9,7 @@ import static org.mockito.Mockito.when;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.UUID;
 import java.util.stream.Stream;
 import org.apache.commons.io.IOUtils;
@@ -20,6 +22,7 @@ import org.folio.dataexp.repository.MappingProfileEntityRepository;
 import org.folio.s3.client.FolioS3Client;
 import org.folio.spring.scope.FolioExecutionContextSetter;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -67,7 +70,7 @@ class DownloadRecordTest extends BaseDataExportInitializer {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       var uuid = UUID.fromString(MISSING_RECORD_ID);
       Exception exception = assertThrows(DownloadRecordException.class, () -> {
-        downloadRecordService.processRecordDownload(uuid, isUtf, postfix, idType);
+        downloadRecordService.processRecordDownload(uuid, isUtf, postfix, idType, false);
       });
       assertEquals("Couldn't find %s in db for ID: %s".formatted(idType.toString().toLowerCase(),
           MISSING_RECORD_ID), exception.getMessage());
@@ -86,10 +89,10 @@ class DownloadRecordTest extends BaseDataExportInitializer {
           new InputStreamResource((new ByteArrayInputStream(fileContent.getBytes())));
 
       var actualResult = downloadRecordService.processRecordDownload(UUID.fromString(recordId),
-          isUtf, postfix, idType);
+          isUtf, postfix, idType, false);
 
       assertTrue(compareInputStreams(expectedResult, actualResult));
-      assertEquals(filePath, s3Client.list(filePath).get(0));
+      assertEquals(filePath, s3Client.list(filePath).getFirst());
     }
   }
 
@@ -105,10 +108,48 @@ class DownloadRecordTest extends BaseDataExportInitializer {
           new InputStreamResource((new ByteArrayInputStream(fileContent.getBytes())));
 
       var actualResult = downloadRecordService.processRecordDownload(UUID.fromString(recordId),
-          isUtf, postfix, idType);
+          isUtf, postfix, idType, false);
 
       assertTrue(compareInputStreams(expectedResult, actualResult));
-      assertEquals(filePath, s3Client.list(filePath).get(0));
+      assertEquals(filePath, s3Client.list(filePath).getFirst());
+    }
+  }
+
+  @Test
+  void suppress999FieldIfParameterIsTrue() throws IOException {
+    final String fileContent =
+            "00237cam a2200073 i 4500001001400000008004100014373002900055999007900084"
+            + "\u001Ein00000001098\u001E210701t20222022nyua   c      001 0 eng d\u001E  \u001F"
+            + "aπανεπιστήμιο\u001Eff\u001Fs17eed93e-f9e2-4cb2-a52b-e9155acfc119\u001Fi4a090b0f-"
+            + "9da3-40f1-ab17-33d6a1e3abae\u001E\u001D";
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
+      var filePath = "mod-data-export/download/%s/%s.mrc".formatted(AUTHORITY_ID
+              + "-utf", AUTHORITY_ID + "-utf");
+      s3Client.write(filePath, new ByteArrayInputStream(fileContent.getBytes()));
+
+      var actualResult = downloadRecordService.processRecordDownload(UUID.fromString(AUTHORITY_ID),
+              true, "-utf", IdType.AUTHORITY, true);
+      assertFalse(IOUtils.toString(actualResult.getInputStream(), StandardCharsets.UTF_8)
+              .contains("999"));
+    }
+  }
+
+  @Test
+  void doNotSuppress999FieldIfParameterIsFalse() throws IOException {
+    final String fileContent =
+            "00237cam a2200073 i 4500001001400000008004100014373002900055999007900084"
+            + "\u001Ein00000001098\u001E210701t20222022nyua   c      001 0 eng d\u001E  \u001F"
+            + "aπανεπιστήμιο\u001Eff\u001Fs17eed93e-f9e2-4cb2-a52b-e9155acfc119\u001Fi4a090b0f-"
+            + "9da3-40f1-ab17-33d6a1e3abae\u001E\u001D";
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
+      var filePath = "mod-data-export/download/%s/%s.mrc".formatted(AUTHORITY_ID
+              + "-utf", AUTHORITY_ID + "-utf");
+      s3Client.write(filePath, new ByteArrayInputStream(fileContent.getBytes()));
+
+      var actualResult = downloadRecordService.processRecordDownload(UUID.fromString(AUTHORITY_ID),
+              true, "-utf", IdType.AUTHORITY, false);
+      assertTrue(IOUtils.toString(actualResult.getInputStream(), StandardCharsets.UTF_8)
+              .contains("999"));
     }
   }
 
